RESOLVED FIXED303767
After 304007@main, a network activity is no longer taken on process swap
https://bugs.webkit.org/show_bug.cgi?id=303767
Summary After 304007@main, a network activity is no longer taken on process swap
Per Arne Vollan
Reported 2025-12-08 10:54:28 PST
After 304007@main, a network activity is no longer taken on process swap.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-08 10:54:38 PST
Per Arne Vollan
Comment 2 2025-12-08 10:55:44 PST
EWS
Comment 3 2025-12-09 14:26:22 PST
Committed 304180@main (e4ade59d3c14): <https://commits.webkit.org/304180@main> Reviewed commits have been landed. Closing PR #55048 and removing active labels.
Alexey Proskuryakov
Comment 4 2025-12-10 13:08:51 PST
*** Bug 303893 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.