After 304007@main, a network activity is no longer taken on process swap https://bugs.webkit.org/show_bug.cgi?id=303767 rdar://166075191

Reviewed by Sihui Liu.

This is caused by the fact that NavigationState::didSwapWebProcesses() is called after the process
swap has happened, so we do no longer have information about whether the previous process had a
network activity. This is resolved by checking if a page load is in progress when the process is
being swapped. Additionally, we don't clear the network activity in WebProcessActivityState::reset(),
since NavigationState has a timer that handles this. This fixes a page load time regression
introduced by 304007@main.

* Source/WebKit/UIProcess/Cocoa/NavigationState.h:
* Source/WebKit/UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::releaseNetworkActivity):
(WebKit::NavigationState::didChangeIsLoading):
(WebKit::NavigationState::didSwapWebProcesses):
* Source/WebKit/UIProcess/WebProcessActivityState.cpp:
(WebKit::WebProcessActivityState::reset):

Canonical link: https://commits.webkit.org/304180@main